api: add AttachmentIds to note reply
