# src/docs/swagger.json
@@ -2387,6 +2387,12 @@
         "controllers.NoteReply": {
             "type": "object",
             "properties": {
+                "attachment_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "author_id": {
                     "type": "string"
                 },
